# code-review-benchmark

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml
dashboard/: app.py  data.py
db/: queries.py  repository.py
offline/: .env.example  .gitignore  README.md  pyproject.toml
offline/analysis/: benchmark_dashboard.html  benchmark_dashboard.json  benchmark_dashboard.py
offline/code_review_benchmark/: step0_fork_prs.py  step1_5_parse_reviews.py  step2_extract_comments.py  step3_judge_comments.py
offline/code_review_benchmark/parsers/: __init__.py  base.py  coderabbit.py  default.py
offline/results/anthropic_claude-opus-4-5-20251101/: candidates.json
offline/results/anthropic_claude-sonnet-4-5-20250929/: candidates.json
offline/results/openai_gpt-5.2/: candidates.json
offline/tests/: test_coderabbit_classifier.py  test_coderabbit_inline.py  test_coderabbit_parser.py  test_coderabbit_status.py  test_details_splitter.py  test_integration_coderabbit.py  test_parsers_base.py  test_parsers_default.py  test_parsers_registry.py  test_step1_5.py  test_step2.py
online/: README.md
online/api_service/: README.md
online/etl/: .env.example  README.md  config.py  pyproject.toml
pipeline/: analyze.py  enrich.py
service/: Cargo.toml
service/src/: compute.rs  db.rs  handlers.rs  main.rs  model.rs  tests.rs
service/static/: index.html
