[project]
name = "pr-review-dataset"
version = "0.1.0"
description = "ETL pipeline for the online code review benchmark: discovers, enriches, and analyzes PR reviews from GitHub"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.48.0",
    "google-cloud-bigquery>=3.40.0",
    "httpx>=0.28.1",
    "tqdm>=4.67.3",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "pandas>=2.0.0",
    "psycopg[binary]>=3.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".env",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "LOG", # flake8-logging
    "G",   # flake8-logging-format
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "Q",   # flake8-quotes
    "RUF", # Ruff-specific rules
]
ignore = [
    "D107",
    "D203",
    "D213",
    "G004",  # f-strings in logging — our convention
    "E501",  # line length — enforced by formatter for code, not for strings/comments
]
allowed-confusables = ["α"]

[tool.ruff.lint.per-file-ignores]
"dashboard/app.py" = ["E402"]  # sys.path manipulation before imports
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = [
    "config",
    "db",
    "pipeline",
    "jobs",
    "llm",
    "migration",
    "dashboard",
]
force-single-line = true
single-line-exclusions = ["typing", "collections.abc"]
split-on-trailing-comma = false
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
